# kite_window_finder

./: .gitignore  AGENTS.md  MVP-Backlog.md  README.md  Tide_kitebarkeit.md  forecast_korrelation_kurzbericht.md  projektbeschreibung.md  pyproject.toml  render.yaml
.github/workflows/: deploy-pages.yml
app/: main.py
app/api/: routes_health.py  routes_ratings.py  routes_spots.py
app/core/: errors.py  settings.py
app/models/: adjustment.py  error.py  rating.py  skill.py  spot.py  timeseries.py  weather.py
app/services/: adjustments_service.py  health_service.py  rating_service.py  spots_service.py  weather_service.py
app/services/providers/: __init__.py  base.py  cache.py  open_meteo_provider.py  synthetic_provider.py
deploy/: env.example  setup_hostinger_vps.sh
deploy/nginx/: kite-window-finder-api.conf
deploy/systemd/: kite-window-finder-api.service
frontend/: config.js  index.html
tests/: conftest.py  test_health.py  test_open_meteo_provider_cache.py  test_rating_cold_temp_cap.py  test_rating_wind_star_caps.py  test_ratings_api.py  test_spots.py
user_stories/: US-001-tasks-api.md
